# lidarr-youtube-downloader

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  PKG-INFO  README.md  env  lidarr-unmapped.py  lidarr-youtube-downloader.py  lidarr-youtube-search.py  pyproject.toml  setup.py  version
.github/workflows/: ai-responder.yml  main.yml
lidarr_youtube_downloader/: lidarr-unmapped.py  lidarr-youtube-downloader.py  lyd-unmapped.py  lyd.py
lidarr_youtube_downloader/view/: lidarr  lidarrdb_update  missing  tagging  youtube-dl  youtube-search  yt-dlp  yt-dlp_result
view/: ffmpeg  youtube-dl
