[tool.poetry]
name = "lidarr-youtube-downloader"
version = "0.3.33"
description = ""
readme = "README.md"
repository = "https://github.com/dmzoneill/lidarr-youtube-downloader"
authors = ["David O Neill <dmz.oneill@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
youtube-search-python = "*"
eyed3 = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"

[tool.poetry.scripts]
lyd = "lidarr_youtube_downloader.lyd:app"
lyd-unmapped = "lidarr_youtube_downloader.lyd-unmapped:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


