[tool.poetry]
name = "lidarr-youtube-downloader"
version = "0.3.35"
description = ""
readme = "README.md"
repository = "https://github.com/dmzoneill/lidarr-youtube-downloader"
authors = ["David O Neill <dmz.oneill@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
youtube-search-python = "*"
eyed3 = "*"
typer = "*"
yt-dlp = "*"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[tool.poetry.scripts]
lyd = "lidarr_youtube_downloader.lyd:app"
lyd-unmapped = "lidarr_youtube_downloader.lyd-unmapped:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


